--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:id="@+id/tvtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="投影设置"
+        android:text="@string/projection_settings_title"
         android:textColor="?attr/textColor"
         android:textSize="@dimen/main_title_textSize"
         android:textStyle="normal"
@@ -51,38 +51,41 @@
             android:id="@+id/trapezoidal_double_point"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/main_RL_height"
-            android:background="?attr/unselFrameBG"
+            android:background="?btnBg"
             android:paddingEnd="@dimen/main_RL_paddingEnd"
             android:focusable="true"
             android:gravity="center_vertical">
 
-            <ImageView
+           <ImageView
                 android:id="@+id/iv_trapezoidal_double_point"
+                android:duplicateParentState="true"
                 android:layout_width="@dimen/main_iv_width"
                 android:layout_height="@dimen/main_iv_height"
                 android:scaleType="fitCenter"
                 android:layout_marginTop="@dimen/main_iv_marginTop"
                 android:padding="@dimen/main_iv_padding"
-                android:src="?attr/trape_single_Src" />
+                android:src="?icon_trape_double" />
 
             <TextView
                 android:id="@+id/tv_trapezoidal_double_point"
+                android:duplicateParentState="true"
+                android:layout_toRightOf="@+id/iv_trapezoidal_double_point"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/main_tv_height"
-                android:layout_toRightOf="@+id/iv_trapezoidal_double_point"
                 android:gravity="center_vertical"
-                android:text="两点梯形校正"
-                android:textColor="?attr/textColor"
+                android:text="@string/TwoPointKeystone"
+                android:textColor="?btnTextColor"
                 android:textSize="@dimen/main_tv_textSize"
                 android:textStyle="normal" />
 
             <ImageView
                 android:id="@+id/arrow_trapezoidal_double_point"
+                android:duplicateParentState="true"
                 android:layout_width="@dimen/main_arrow_width"
                 android:layout_height="@dimen/main_arrow_height"
                 android:layout_marginStart="@dimen/main_arrow_marginStart"
                 android:layout_marginTop="@dimen/main_arrow_marginTop"
-                android:src="?attr/arrowSrc" />
+                android:src="?icon_arrow" />
         </RelativeLayout>
 
         <!--四点梯形校正-->
@@ -90,7 +93,7 @@
             android:id="@+id/trapezoidal_single_point"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/main_RL_height"
-            android:background="?attr/unselFrameBG"
+            android:background="?btnBg"
             android:focusable="true"
             android:paddingEnd="@dimen/main_RL_paddingEnd"
             android:gravity="center_vertical"
@@ -98,30 +101,33 @@
 
             <ImageView
                 android:id="@+id/iv_trapezoidal_single_point"
+                android:duplicateParentState="true"
                 android:layout_width="@dimen/main_iv_width"
                 android:layout_height="@dimen/main_iv_height"
                 android:layout_marginTop="@dimen/main_iv_marginTop"
                 android:padding="@dimen/main_iv_padding"
-                android:src="?attr/trape_double_Src" />
+                android:src="?icon_trape_single" />
 
             <TextView
                 android:id="@+id/tv_trapezoidal_single_point"
+                android:duplicateParentState="true"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/main_tv_height"
                 android:layout_toRightOf="@+id/iv_trapezoidal_single_point"
                 android:gravity="center_vertical"
-                android:text="四点梯形校正"
-                android:textColor="?attr/textColor"
+                android:text="@string/FourPointKeystone"
+                android:textColor="?btnTextColor"
                 android:textSize="@dimen/main_tv_textSize"
                 android:textStyle="normal" />
 
             <ImageView
                 android:id="@+id/arrow_trapezoidal_single_point"
+                android:duplicateParentState="true"
                 android:layout_width="@dimen/main_arrow_width"
                 android:layout_height="@dimen/main_arrow_height"
                 android:layout_marginStart="@dimen/main_arrow_marginStart"
                 android:layout_marginTop="@dimen/main_arrow_marginTop"
-                android:src="?attr/arrowSrc" />
+                android:src="?icon_arrow" />
         </RelativeLayout>
 
         <!--尺寸调节-->
@@ -129,7 +135,7 @@
             android:id="@+id/size"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/main_RL_height"
-            android:background="?attr/unselFrameBG"
+            android:background="?btnBg"
             android:focusable="true"
             android:paddingEnd="@dimen/main_RL_paddingEnd"
             android:gravity="center_vertical"
@@ -137,31 +143,34 @@
 
             <ImageView
                 android:id="@+id/iv_size"
+                android:duplicateParentState="true"
                 android:layout_width="@dimen/main_iv_width"
                 android:layout_height="@dimen/main_iv_height"
                 android:layout_alignParentLeft="true"
                 android:layout_marginTop="@dimen/main_iv_marginTop"
                 android:padding="@dimen/main_iv_padding"
-                android:src="?attr/size_src" />
+                android:src="?icon_size" />
 
             <TextView
                 android:id="@+id/tv_size"
+                android:duplicateParentState="true"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/main_tv_height"
                 android:layout_toRightOf="@+id/iv_size"
                 android:gravity="center_vertical"
-                android:text="尺寸调节"
-                android:textColor="?attr/textColor"
+                android:text="@string/SizeAdjustment"
+                android:textColor="?btnTextColor"
                 android:textSize="@dimen/main_tv_textSize"
                 android:textStyle="normal" />
 
             <ImageView
                 android:id="@+id/arrow_size"
+                android:duplicateParentState="true"
                 android:layout_width="@dimen/main_arrow_width"
                 android:layout_height="@dimen/main_arrow_height"
                 android:layout_marginStart="@dimen/main_arrow_marginStart"
                 android:layout_marginTop="@dimen/main_arrow_marginTop"
-                android:src="?attr/arrowSrc" />
+                android:src="?icon_arrow" />
         </RelativeLayout>
 
         <!--投影方式-->
@@ -169,7 +178,7 @@
             android:id="@+id/projection"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/main_RL_height"
-            android:background="?attr/unselFrameBG"
+            android:background="?btnBg"
             android:focusable="true"
             android:gravity="center_vertical"
             android:paddingEnd="@dimen/main_RL_paddingEnd"
@@ -177,42 +186,48 @@
 
             <ImageView
                 android:id="@+id/iv_projection"
+                android:duplicateParentState="true"
                 android:layout_width="@dimen/main_iv_width"
                 android:layout_height="@dimen/main_iv_height"
                 android:layout_alignParentLeft="true"
                 android:layout_marginTop="@dimen/main_iv_marginTop"
                 android:padding="@dimen/main_iv_padding"
-                android:src="?attr/projection_Src" />
+                android:src="?icon_projection" />
 
             <TextView
                 android:id="@+id/tv_projection"
+                android:duplicateParentState="true"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/main_tv_height"
                 android:layout_toRightOf="@+id/iv_projection"
                 android:gravity="center_vertical"
-                android:text="投影方式"
-                android:textColor="?attr/textColor"
+                android:text="@string/projection_mode"
+                android:textColor="?btnTextColor"
                 android:textSize="@dimen/main_tv_textSize"
                 android:textStyle="normal" />
 
-            <TextView
-                android:id="@+id/tv_projection_small"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/main_tv_height"
-                android:layout_marginLeft="@dimen/main_tv_marginLeft"
-                android:layout_toRightOf="@+id/tv_projection"
-                android:paddingTop="@dimen/main_tv_paddingTop"
-                android:textColor="?attr/textColor"
-                android:textSize="@dimen/main_tv_textSize_small"
-                android:textStyle="normal" />
 
             <ImageView
                 android:id="@+id/arrow_projection"
+                android:duplicateParentState="true"
                 android:layout_width="@dimen/main_arrow_width"
                 android:layout_height="@dimen/main_arrow_height"
                 android:layout_marginStart="@dimen/main_arrow_marginStart"
                 android:layout_marginTop="@dimen/main_arrow_marginTop"
-                android:src="?attr/arrowSrc" />
+                android:src="?icon_arrow" />
+
+            <TextView
+                android:id="@+id/tv_projection_small"
+                android:duplicateParentState="true"
+                android:layout_width="@dimen/main_tv_marginRight"
+                android:layout_height="@dimen/main_tv_height"
+                android:gravity="right"
+                android:layout_toRightOf="@+id/tv_projection"
+                android:paddingTop="@dimen/main_tv_paddingTop"
+                android:text="@string/projection_mode＿pos_pos"
+                android:textColor="?btnTextColor"
+                android:textSize="@dimen/main_tv_textSize_small"
+                android:textStyle="normal" />
         </RelativeLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
