--- a/app/src/main/res/layout/activity_trapezoidal_double_point.xml
+++ b/app/src/main/res/layout/activity_trapezoidal_double_point.xml
@@ -42,6 +42,7 @@
             android:paddingTop="@dimen/double_tv_vertical_paddingTop"
             android:text="0,0"
             android:textSize="@dimen/size_textLevel_textSize"
+            android:textColor="?textColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -61,6 +62,7 @@
             android:paddingTop="@dimen/double_tv_horizontal_paddingTop"
             android:text="0,0"
             android:textSize="@dimen/size_textLevel_textSize"
+            android:textColor="?textColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/iv_arrow_horizontal" />
 
