--- a/app/src/main/res/layout/activity_trapezoidal_single_point.xml
+++ b/app/src/main/res/layout/activity_trapezoidal_single_point.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:text="0,0"
         android:textSize="@dimen/single_tv_textSize"
+        android:textColor="?textColor"
         android:layout_marginTop="@dimen/single_tv_margin"
         android:layout_marginLeft="@dimen/single_tv_margin"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +45,7 @@
         android:visibility="visible"
         android:text="0,0"
         android:textSize="@dimen/single_tv_textSize"
+        android:textColor="?textColor"
         android:layout_marginTop="@dimen/single_tv_margin"
         android:layout_marginEnd="@dimen/single_tv_margin"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,6 +69,7 @@
         android:visibility="visible"
         android:text="0,0"
         android:textSize="@dimen/single_tv_textSize"
+        android:textColor="?textColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="@dimen/single_tv_margin"
@@ -90,6 +93,7 @@
         android:visibility="visible"
         android:text="0,0"
         android:textSize="@dimen/single_tv_textSize"
+        android:textColor="?textColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="@dimen/single_tv_margin"
