--- a/app/src/main/res/values-1920x1080/dimens.xml
+++ b/app/src/main/res/values-1920x1080/dimens.xml
@@ -3,14 +3,14 @@
     <dimen name="main_title_textSize">25sp</dimen>
     <dimen name="main_tv_textSize">20sp</dimen>
     <dimen name="main_RL_height">70dp</dimen>
-    <dimen name="main_title_marginTop">30dp</dimen>
+    <dimen name="main_title_marginTop">50dp</dimen>
     <dimen name="main_title_marginStart">100dp</dimen>
     <dimen name="projection_title_textSize">30sp</dimen>
-    <dimen name="main_tv_textSize_small">15sp</dimen>
+    <dimen name="main_tv_textSize_small">20sp</dimen>
     <dimen name="main_title_arrow_width">25dp</dimen>
     <dimen name="main_title_arrow_height">25dp</dimen>
     <dimen name="main_title_arrow_marginStart">70dp</dimen>
-    <dimen name="main_title_arrow_marginTop">36dp</dimen>
+    <dimen name="main_title_arrow_marginTop">55dp</dimen>
     <dimen name="double_vertical_paddingTop">23dp</dimen>
     <dimen name="double_tv_vertical_paddingStart">75dp</dimen>
     <dimen name="double_tv_vertical_paddingTop">13dp</dimen>
@@ -22,22 +22,22 @@
     <dimen name="doublePoint_iv_height">380dp</dimen>
     <dimen name="doublePoint_iv_marginStart">60dp</dimen>
     <dimen name="doublePoint_iv_marginTop">80dp</dimen>
-    <dimen name="singlePoint_lu_marginStart">45dp</dimen>
-    <dimen name="singlePoint_lu_marginTop">45dp</dimen>
-    <dimen name="singlePoint_ru_marginTop">40dp</dimen>
-    <dimen name="singlePoint_ru_marginEnd">45dp</dimen>
-    <dimen name="singlePoint_ld_marginStart">48dp</dimen>
-    <dimen name="singlePoint_ld_marginBottom">45dp</dimen>
-    <dimen name="singlePoint_rd_marginEnd">45dp</dimen>
-    <dimen name="singlePoint_rd_marginBottom">45dp</dimen>
+    <dimen name="singlePoint_lu_marginStart">65dp</dimen>
+    <dimen name="singlePoint_lu_marginTop">65dp</dimen>
+    <dimen name="singlePoint_ru_marginTop">65dp</dimen>
+    <dimen name="singlePoint_ru_marginEnd">65dp</dimen>
+    <dimen name="singlePoint_ld_marginStart">65dp</dimen>
+    <dimen name="singlePoint_ld_marginBottom">65dp</dimen>
+    <dimen name="singlePoint_rd_marginEnd">65dp</dimen>
+    <dimen name="singlePoint_rd_marginBottom">65dp</dimen>
     <dimen name="singlePoint_iv_width">800dp</dimen>
     <dimen name="singlePoint_iv_height">400dp</dimen>
     <dimen name="singlePoint_iv_marginStart">80dp</dimen>
     <dimen name="singlePoint_iv_marginTop">70dp</dimen>
     <dimen name="size_iv_width">500dp</dimen>
-    <dimen name="projection_RL_width">800dp</dimen>
+    <dimen name="projection_RL_width">890dp</dimen>
     <dimen name="projection_RL_marginTop">20dp</dimen>
-    <dimen name="main_arrow_marginStart">650dp</dimen>
+    <dimen name="main_arrow_marginStart">850dp</dimen>
     <dimen name="size_textLevel_marginLeft">430dp</dimen>
     <dimen name="size_text_marginLeft">425dp</dimen>
     <dimen name="size_seek_width">350dp</dimen>
@@ -48,14 +48,15 @@
     <dimen name="size_textLevel_textSize">30sp</dimen>
     <dimen name="size_textLevel_marginTop">10dp</dimen>
     <dimen name="projection_LL_marginStart">270dp</dimen>
-    <dimen name="projection_LL_marginTop">110dp</dimen>
+    <dimen name="projection_LL_marginTop">130dp</dimen>
     <dimen name="size_iv_marginLeft">220dp</dimen>
     <dimen name="dp140">140dp</dimen>
     <dimen name="main_iv_width">100dp</dimen>
     <dimen name="main_tv_marginLeft">390dp</dimen>
+    <dimen name="main_tv_marginRight">570dp</dimen>
     <dimen name="size_iv_marginTop">70dp</dimen>
     <dimen name="size_text_textSize">20sp</dimen>
-    <dimen name="projection_RL_height">60dp</dimen>
+    <dimen name="projection_RL_height">68dp</dimen>
     <dimen name="projection_tv_height">50dp</dimen>
     <dimen name="main_iv_height">50dp</dimen>
     <dimen name="main_tv_height">50dp</dimen>
@@ -69,19 +70,19 @@
     <dimen name="doublePoint_rd_marginEnd">15dp</dimen>
     <dimen name="doublePoint_rd_marginBottom">20dp</dimen>
     <dimen name="projection_title_marginTop">20dp</dimen>
-    <dimen name="main_tv_paddingTop">19dp</dimen>
+    <dimen name="main_tv_paddingTop">15dp</dimen>
     <dimen name="main_arrow_marginTop">15dp</dimen>
-    <dimen name="projection_tv_paddingTop">8dp</dimen>
+    <dimen name="projection_tv_paddingTop">12dp</dimen>
     <dimen name="projection_tv_textSize">30sp</dimen>
     <dimen name="projection_tv_marginLeft">20dp</dimen>
-    <dimen name="projection_iv_width">30dp</dimen>
-    <dimen name="projection_iv_height">30dp</dimen>
-    <dimen name="projection_iv_marginStart">750dp</dimen>
-    <dimen name="projection_iv_marginTop">15dp</dimen>
+    <dimen name="projection_iv_width">35dp</dimen>
+    <dimen name="projection_iv_height">35dp</dimen>
+    <dimen name="projection_iv_marginStart">830dp</dimen>
+    <dimen name="projection_iv_marginTop">20dp</dimen>
     <dimen name="projection_title_arrow_width">25dp</dimen>
     <dimen name="projection_title_arrow_height">25dp</dimen>
     <dimen name="projection_title_arrow_marginStart">70dp</dimen>
-    <dimen name="projection_title_arrow_marginTop">30dp</dimen>
+    <dimen name="projection_title_arrow_marginTop">55dp</dimen>
     <dimen name="main_RL_marginTop">15dp</dimen>
     <dimen name="main_iv_marginTop">5dp</dimen>
     <dimen name="doublePoint_lu_marginStart">33dp</dimen>
