--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -59,6 +59,7 @@
     <dimen name="main_iv_width">100dp</dimen>
     <dimen name="main_iv_padding">5dp</dimen>
     <dimen name="main_tv_marginLeft">90dp</dimen>
+    <dimen name="main_tv_marginRight">400dp</dimen>
     <dimen name="size_iv_marginTop">70dp</dimen>
     <dimen name="projection_RL_height">60dp</dimen>
     <dimen name="projection_tv_height">50dp</dimen>
