--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,7 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="unselFrameBG">@drawable/test_red</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
@@ -31,6 +32,14 @@
         <item name="arrow_horizontal">@mipmap/arrow_horizont_white</item>
         <item name="arrow_vertical">@mipmap/arrow_vertical_white</item>
         <item name="trape_dots">@drawable/trape_dot_white</item>
+        <item name="btnTextColor">@color/selector_iceblue_btntextcolor</item>
+        <item name="btnBg">@drawable/selector_iceblue_btnbg</item>
+        <item name="icon_trape_double">@drawable/selector_iceblue_icon_trape_double</item>
+        <item name="icon_trape_single">@drawable/selector_iceblue_icon_trape_single</item>
+        <item name="icon_size">@drawable/selector_iceblue_icon_size</item>
+        <item name="icon_projection">@drawable/selector_iceblue_icon_projection</item>
+        <item name="icon_arrow">@drawable/selector_iceblue_icon_arrow</item>
+        <item name="icon_projection_selected">@drawable/selector_iceblue_icon_projection_selected</item>
     </style>
 
     <!--星空蓝-->
@@ -50,6 +59,14 @@
         <item name="arrow_horizontal">@mipmap/arrow_horizont_white</item>
         <item name="arrow_vertical">@mipmap/arrow_vertical_white</item>
         <item name="trape_dots">@drawable/trape_dot_white</item>
+        <item name="btnTextColor">@color/selector_starblue_btntextcolor</item>
+        <item name="btnBg">@drawable/selector_starblue_btnbg</item>
+        <item name="icon_trape_double">@drawable/selector_starblue_icon_trape_double</item>
+        <item name="icon_trape_single">@drawable/selector_starblue_icon_trape_single</item>
+        <item name="icon_size">@drawable/selector_starblue_icon_size</item>
+        <item name="icon_projection">@drawable/selector_starblue_icon_projection</item>
+        <item name="icon_arrow">@drawable/selector_starblue_icon_arrow</item>
+        <item name="icon_projection_selected">@drawable/selector_starblue_icon_projection_selected</item>
     </style>
 
     <!--木棉白-->
@@ -69,5 +86,13 @@
         <item name="arrow_horizontal">@mipmap/arrow_horizont</item>
         <item name="arrow_vertical">@mipmap/arrow_vertical</item>
         <item name="trape_dots">@drawable/trape_dot</item>
+        <item name="btnTextColor">@color/selector_kapokwhite_btntextcolor</item>
+        <item name="btnBg">@drawable/selector_kapokwhite_btnbg</item>
+        <item name="icon_trape_double">@drawable/selector_kapokwhite_icon_trape_double</item>
+        <item name="icon_trape_single">@drawable/selector_kapokwhite_icon_trape_single</item>
+        <item name="icon_size">@drawable/selector_kapokwhite_icon_size</item>
+        <item name="icon_projection">@drawable/selector_kapokwhite_icon_projection</item>
+        <item name="icon_arrow">@drawable/selector_kapokwhite_icon_arrow</item>
+        <item name="icon_projection_selected">@drawable/selector_kapokwhite_icon_projection_selected</item>
     </style>
 </resources>
